y.output
Terminals unused in grammar

   BREAK
   CASE
   CLASS
   CONTINUE
   DO
   EXIT
   NULL_SCALA
   REPEAT
   TYPE
   "||"
   "&&"
   "<="
   "=="
   "=>"
   "!="


State 85 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: OBJECT ID '{' $@1 block_contents_obj '}'

    3 block_contents_obj: block_content_obj
    4                   | block_contents_obj block_content_obj

    5 block_content_obj: declaration
    6                  | method

    7 $@2: %empty

    8 method: DEF ID '(' $@2 method_arg_con

    9 method_arg_con: method_arg '{' '}'
   10               | method_arg '{' block_contents '}'

   11 method_arg: ')'
   12           | parameter ')'
   13           | ')' ':' type
   14           | parameter ')' ':' type

   15 parameter: par
   16          | parameter ',' par

   17 par: ID ':' type

   18 block_contents: block_content
   19               | block_contents block_content

   20 block_content: declaration
   21              | statement
   22              | RETURN
   23              | RETURN expression

   24 $@3: %empty

   25 block_content: '{' $@3 '}'

   26 $@4: %empty

   27 block_content: '{' $@4 block_contents '}'

   28 declaration: val
   29            | var
   30            | array

   31 val: VAL ID '=' expression
   32    | VAL ID ':' type '=' expression

   33 var: VAR ID
   34    | VAR ID ':' type
   35    | VAR ID '=' expression
   36    | VAR ID ':' type '=' expression

   37 array: VAR ID ':' type '[' expression ']'

   38 statement: ID
   39          | ID '=' expression
   40          | ID '(' ')'
   41          | ID '=' ID '(' ')'

   42 $@5: %empty

   43 statement: ID '(' $@5 expression_list ')'

   44 $@6: %empty

   45 statement: ID '=' ID '(' $@6 expression_list ')'
   46          | ID '[' expression ']' '=' expression
   47          | ID '[' expression ']' '=' ID '(' ')'

   48 $@7: %empty

   49 statement: ID '[' expression ']' '=' ID '(' $@7 expression_list ')'
   50          | PRINT '(' expression ')'
   51          | PRINTLN '(' expression ')'
   52          | READ ID
   53          | IF '(' boolean_expression ')' block_or_statement
   54          | IF '(' boolean_expression ')' block_or_statement ELSE block_or_statement
   55          | FOR '(' ID '<' '-' INT TO INT ')' block_or_statement
   56          | WHILE '(' boolean_expression ')' block_or_statement

   57 expression_list: expression
   58                | expression_list ',' expression

   59 expression: expression '+' expression
   60           | expression '-' expression
   61           | expression '*' expression
   62           | expression '/' expression
   63           | expression '%' expression
   64           | '-' expression
   65           | '(' expression ')'
   66           | data
   67           | ID

   68 boolean_expression: bool_expr
   69                   | bool_expr biop bool_expr

   70 bool_expr: '!' bool_expr
   71          | '(' boolean_expression ')'
   72          | ID
   73          | INT
   74          | CHAR
   75          | FLOAT
   76          | TRUE
   77          | FALSE

   78 biop: BIOP
   79     | '<'
   80     | '>'

   81 block_or_statement: '{' '}'

   82 $@8: %empty

   83 block_or_statement: '{' $@8 block_contents '}'
   84                   | statement

   85 type: INT
   86     | CHAR
   87     | FLOAT
   88     | STRING
   89     | BOOLEAN

   90 data: INT
   91     | CHAR
   92     | FLOAT
   93     | STRING
   94     | TRUE
   95     | FALSE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 70
'%' (37) 63
'(' (40) 8 40 41 43 45 47 49 50 51 53 54 55 56 65 71
')' (41) 11 12 13 14 40 41 43 45 47 49 50 51 53 54 55 56 65 71
'*' (42) 61
'+' (43) 59
',' (44) 16 58
'-' (45) 55 60 64
'/' (47) 62
':' (58) 13 14 17 32 34 36 37
'<' (60) 55 79
'=' (61) 31 32 35 36 39 41 45 46 47 49
'>' (62) 80
'[' (91) 37 46 47 49
']' (93) 37 46 47 49
'{' (123) 2 9 10 25 27 81 83
'}' (125) 2 9 10 25 27 81 83
error (256)
ID (258) 2 8 17 31 32 33 34 35 36 37 38 39 40 41 43 45 46 47 49 52
    55 67 72
BIOP (259) 78
BREAK (260)
CASE (261)
CLASS (262)
CONTINUE (263)
DEF (264) 8
DO (265)
ELSE (266) 54
EXIT (267)
FOR (268) 55
IF (269) 53 54
NULL_SCALA (270)
OBJECT (271) 2
PRINT (272) 50
PRINTLN (273) 51
READ (274) 52
REPEAT (275)
RETURN (276) 22 23
TO (277) 55
TYPE (278)
VAL (279) 31 32
VAR (280) 33 34 35 36 37
WHILE (281) 56
TRUE (282) 76 94
FALSE (283) 77 95
INT (284) 55 73 85 90
CHAR (285) 74 86 91
FLOAT (286) 75 87 92
STRING (287) 88 93
BOOLEAN (288) 89
"||" (289)
"&&" (290)
"<=" (291)
"==" (292)
"=>" (293)
"!=" (294)
UMINUS (295)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 2, on right: 0
$@1 (60)
    on left: 1, on right: 2
block_contents_obj (61)
    on left: 3 4, on right: 2 4
block_content_obj (62)
    on left: 5 6, on right: 3 4
method (63)
    on left: 8, on right: 6
$@2 (64)
    on left: 7, on right: 8
method_arg_con (65)
    on left: 9 10, on right: 8
method_arg (66)
    on left: 11 12 13 14, on right: 9 10
parameter (67)
    on left: 15 16, on right: 12 14 16
par (68)
    on left: 17, on right: 15 16
block_contents (69)
    on left: 18 19, on right: 10 19 27 83
block_content (70)
    on left: 20 21 22 23 25 27, on right: 18 19
$@3 (71)
    on left: 24, on right: 25
$@4 (72)
    on left: 26, on right: 27
declaration (73)
    on left: 28 29 30, on right: 5 20
val (74)
    on left: 31 32, on right: 28
var (75)
    on left: 33 34 35 36, on right: 29
array (76)
    on left: 37, on right: 30
statement (77)
    on left: 38 39 40 41 43 45 46 47 49 50 51 52 53 54 55 56, on right:
    21 84
$@5 (78)
    on left: 42, on right: 43
$@6 (79)
    on left: 44, on right: 45
$@7 (80)
    on left: 48, on right: 49
expression_list (81)
    on left: 57 58, on right: 43 45 49 58
expression (82)
    on left: 59 60 61 62 63 64 65 66 67, on right: 23 31 32 35 36 37
    39 46 47 49 50 51 57 58 59 60 61 62 63 64 65
boolean_expression (83)
    on left: 68 69, on right: 53 54 56 71
bool_expr (84)
    on left: 70 71 72 73 74 75 76 77, on right: 68 69 70
biop (85)
    on left: 78 79 80, on right: 69
block_or_statement (86)
    on left: 81 83 84, on right: 53 54 55 56
$@8 (87)
    on left: 82, on right: 83
type (88)
    on left: 85 86 87 88 89, on right: 13 14 17 32 34 36 37
data (89)
    on left: 90 91 92 93 94 95, on right: 66


State 0

    0 $accept: . program $end

    OBJECT  shift, and go to state 1

    program  go to state 2


State 1

    2 program: OBJECT . ID '{' $@1 block_contents_obj '}'

    ID  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    2 program: OBJECT ID . '{' $@1 block_contents_obj '}'

    '{'  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 program: OBJECT ID '{' . $@1 block_contents_obj '}'

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 6

    2 program: OBJECT ID '{' $@1 . block_contents_obj '}'

    DEF  shift, and go to state 7
    VAL  shift, and go to state 8
    VAR  shift, and go to state 9

    block_contents_obj  go to state 10
    block_content_obj   go to state 11
    method              go to state 12
    declaration         go to state 13
    val                 go to state 14
    var                 go to state 15
    array               go to state 16


State 7

    8 method: DEF . ID '(' $@2 method_arg_con

    ID  shift, and go to state 17


State 8

   31 val: VAL . ID '=' expression
   32    | VAL . ID ':' type '=' expression

    ID  shift, and go to state 18


State 9

   33 var: VAR . ID
   34    | VAR . ID ':' type
   35    | VAR . ID '=' expression
   36    | VAR . ID ':' type '=' expression
   37 array: VAR . ID ':' type '[' expression ']'

    ID  shift, and go to state 19


State 10

    2 program: OBJECT ID '{' $@1 block_contents_obj . '}'
    4 block_contents_obj: block_contents_obj . block_content_obj

    DEF  shift, and go to state 7
    VAL  shift, and go to state 8
    VAR  shift, and go to state 9
    '}'  shift, and go to state 20

    block_content_obj  go to state 21
    method             go to state 12
    declaration        go to state 13
    val                go to state 14
    var                go to state 15
    array              go to state 16


State 11

    3 block_contents_obj: block_content_obj .

    $default  reduce using rule 3 (block_contents_obj)


State 12

    6 block_content_obj: method .

    $default  reduce using rule 6 (block_content_obj)


State 13

    5 block_content_obj: declaration .

    $default  reduce using rule 5 (block_content_obj)


State 14

   28 declaration: val .

    $default  reduce using rule 28 (declaration)


State 15

   29 declaration: var .

    $default  reduce using rule 29 (declaration)


State 16

   30 declaration: array .

    $default  reduce using rule 30 (declaration)


State 17

    8 method: DEF ID . '(' $@2 method_arg_con

    '('  shift, and go to state 22


State 18

   31 val: VAL ID . '=' expression
   32    | VAL ID . ':' type '=' expression

    ':'  shift, and go to state 23
    '='  shift, and go to state 24


State 19

   33 var: VAR ID .
   34    | VAR ID . ':' type
   35    | VAR ID . '=' expression
   36    | VAR ID . ':' type '=' expression
   37 array: VAR ID . ':' type '[' expression ']'

    ':'  shift, and go to state 25
    '='  shift, and go to state 26

    $default  reduce using rule 33 (var)


State 20

    2 program: OBJECT ID '{' $@1 block_contents_obj '}' .

    $default  reduce using rule 2 (program)


State 21

    4 block_contents_obj: block_contents_obj block_content_obj .

    $default  reduce using rule 4 (block_contents_obj)


State 22

    8 method: DEF ID '(' . $@2 method_arg_con

    $default  reduce using rule 7 ($@2)

    $@2  go to state 27


State 23

   32 val: VAL ID ':' . type '=' expression

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 33


State 24

   31 val: VAL ID '=' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 43
    data        go to state 44


State 25

   34 var: VAR ID ':' . type
   36    | VAR ID ':' . type '=' expression
   37 array: VAR ID ':' . type '[' expression ']'

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 45


State 26

   35 var: VAR ID '=' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 46
    data        go to state 44


State 27

    8 method: DEF ID '(' $@2 . method_arg_con

    ID   shift, and go to state 47
    ')'  shift, and go to state 48

    method_arg_con  go to state 49
    method_arg      go to state 50
    parameter       go to state 51
    par             go to state 52


State 28

   85 type: INT .

    $default  reduce using rule 85 (type)


State 29

   86 type: CHAR .

    $default  reduce using rule 86 (type)


State 30

   87 type: FLOAT .

    $default  reduce using rule 87 (type)


State 31

   88 type: STRING .

    $default  reduce using rule 88 (type)


State 32

   89 type: BOOLEAN .

    $default  reduce using rule 89 (type)


State 33

   32 val: VAL ID ':' type . '=' expression

    '='  shift, and go to state 53


State 34

   67 expression: ID .

    $default  reduce using rule 67 (expression)


State 35

   94 data: TRUE .

    $default  reduce using rule 94 (data)


State 36

   95 data: FALSE .

    $default  reduce using rule 95 (data)


State 37

   90 data: INT .

    $default  reduce using rule 90 (data)


State 38

   91 data: CHAR .

    $default  reduce using rule 91 (data)


State 39

   92 data: FLOAT .

    $default  reduce using rule 92 (data)


State 40

   93 data: STRING .

    $default  reduce using rule 93 (data)


State 41

   65 expression: '(' . expression ')'

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 54
    data        go to state 44


State 42

   64 expression: '-' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 55
    data        go to state 44


State 43

   31 val: VAL ID '=' expression .
   59 expression: expression . '+' expression
   60           | expression . '-' expression
   61           | expression . '*' expression
   62           | expression . '/' expression
   63           | expression . '%' expression

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 31 (val)


State 44

   66 expression: data .

    $default  reduce using rule 66 (expression)


State 45

   34 var: VAR ID ':' type .
   36    | VAR ID ':' type . '=' expression
   37 array: VAR ID ':' type . '[' expression ']'

    '='  shift, and go to state 61
    '['  shift, and go to state 62

    $default  reduce using rule 34 (var)


State 46

   35 var: VAR ID '=' expression .
   59 expression: expression . '+' expression
   60           | expression . '-' expression
   61           | expression . '*' expression
   62           | expression . '/' expression
   63           | expression . '%' expression

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 35 (var)


State 47

   17 par: ID . ':' type

    ':'  shift, and go to state 63


State 48

   11 method_arg: ')' .
   13           | ')' . ':' type

    ':'  shift, and go to state 64

    $default  reduce using rule 11 (method_arg)


State 49

    8 method: DEF ID '(' $@2 method_arg_con .

    $default  reduce using rule 8 (method)


State 50

    9 method_arg_con: method_arg . '{' '}'
   10               | method_arg . '{' block_contents '}'

    '{'  shift, and go to state 65


State 51

   12 method_arg: parameter . ')'
   14           | parameter . ')' ':' type
   16 parameter: parameter . ',' par

    ')'  shift, and go to state 66
    ','  shift, and go to state 67


State 52

   15 parameter: par .

    $default  reduce using rule 15 (parameter)


State 53

   32 val: VAL ID ':' type '=' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 68
    data        go to state 44


State 54

   59 expression: expression . '+' expression
   60           | expression . '-' expression
   61           | expression . '*' expression
   62           | expression . '/' expression
   63           | expression . '%' expression
   65           | '(' expression . ')'

    ')'  shift, and go to state 69
    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60


State 55

   59 expression: expression . '+' expression
   60           | expression . '-' expression
   61           | expression . '*' expression
   62           | expression . '/' expression
   63           | expression . '%' expression
   64           | '-' expression .

    $default  reduce using rule 64 (expression)


State 56

   59 expression: expression '+' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 70
    data        go to state 44


State 57

   60 expression: expression '-' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 71
    data        go to state 44


State 58

   61 expression: expression '*' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 72
    data        go to state 44


State 59

   62 expression: expression '/' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 73
    data        go to state 44


State 60

   63 expression: expression '%' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 74
    data        go to state 44


State 61

   36 var: VAR ID ':' type '=' . expression

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 75
    data        go to state 44


State 62

   37 array: VAR ID ':' type '[' . expression ']'

    ID      shift, and go to state 34
    TRUE    shift, and go to state 35
    FALSE   shift, and go to state 36
    INT     shift, and go to state 37
    CHAR    shift, and go to state 38
    FLOAT   shift, and go to state 39
    STRING  shift, and go to state 40
    '('     shift, and go to state 41
    '-'     shift, and go to state 42

    expression  go to state 76
    data        go to state 44


State 63

   17 par: ID ':' . type

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 77


State 64

   13 method_arg: ')' ':' . type

    INT      shift, and go to state 28
    CHAR     shift, and go to state 29
    FLOAT    shift, and go to state 30
    STRING   shift, and go to state 31
    BOOLEAN  shift, and go to state 32

    type  go to state 78


State 65

    9 method_arg_con: method_arg '{' . '}'
   10               | method_arg '{' . block_contents '}'

    ID       shift, and go to state 79
    FOR      shift, and go to state 80
    IF       shift, and go to state 81
    PRINT    shift, and go to state 82
    PRINTLN  shift, and go to state 83
    READ     shift, and go to state 84
    RETURN   shift, and go to state 85
    VAL      shift, and go to state 8
    VAR      shift, and go to state 9
    WHILE    shift, and go to state 86
    '{'      shift, and go to state 87
    '}'      shift, and go to state 88

    block_contents  go to state 89
    block_content   go to state 90
    declaration     go to state 91
    val             go to state 14
    var             go to state 15
    array           go to state 16
    statement       go to state 92


State 66

   12 method_arg: parameter ')' .
   14           | parameter ')' . ':' type

    ':'  shift, and go to state 93

    $default  reduce using rule 12 (method_arg)


State 67

   16 parameter: parameter ',' . par

    ID  shift, and go to state 47

    par  go to state 94


State 68

   32 val: VAL ID ':' type '=' expression .
   59 expression: expression . '+' expression
   60           | expression . '-' expression
   61           | expression . '*' expression
   62           | expression . '/' expression
   63           | expression . '%' expression

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 32 (val)


State 69

   65 expression: '(' expression ')' .
